<resources>
    <string name="app_name">Picum</string>
    <string name="description_of_route">Description</string>
    <string name="amountOfSights_of_route">Sights:</string>
    <string name="distance_of_route">Distance:</string>
    <string name="progress_of_route">Progress:</string>
    <string name="back">Back</string>
    <string name="Show">Show</string>
    <string name="does_it_work">Does it work</string>
    <string name="choose_your_language">Choose your language:</string>
    <string name="Start">Start</string>
    <string name="stadhuis">The main entrance to the stand house is located above the landing, which is guarded  is held by two sandstone lions. The town hall, as it stands now, was not established until 1767. They are actually four houses, which were then renovated by the architect of Orange, Philips Willem Schonck, behind one facade were hidden. The oldest part is the main hall. As early as the fifteenth century, in addition, a so-called \'Cleyn raedthuys\' was put into use. In 1898 came the most right house, the \'Reclining Deer\' next to it, which still has a separate facade. has. Despite the fact that the town hall is only open for a limited time for the public, we would like to give you the following information about the inside of it anyway do not remember. Lady Justice above the main entrance and the wooden statue at the back of the hall indicate that in the past justice was also used in the town hall. The counter of the former court, once standing against the back wall of the hall, is now kept in the Breda\'s Museum. On the left hangs a large copy of Velasques\' famous painting \'Las Lanzas\", that the surrender of Breda to the Spanish commander Spinola (1625) portrays. The original painting hangs in the Prado in Madrid. The town hall is still used for public council meetings and for the concluding marriages. The mayor, aldermen and municipal officials houses since February 1992 in the new Municipal Office on the Claudius Prinsenlaan in Breda. We walk through the gatehouse to the right of the town hall the city yard. In the middle of this square, the statue De . mmemorates Turf skipper of Gerarda Rueb, on the legendary robbery in 1590 of Adriaan van Bergen with his Peat Ship. (The VVV Breda sells a replica).</string>
    <string name="antoniusVanPaduakerk">On the corner of Halstraat / St. Janstraat we are standing in front of the building with the pillars: the garrison command. The building used to be called \"main guard\" named. Before that main guard moved in, this place was where the St. Jan chapel with behind it the buildings of the Knighthood of St. John. The members of this order cared for the sick and the poor here. The street name recalls these knights of St. John. in the chapel began the great city fire of 1534. The St. Janstraat was once also called the Veterstraat, probably after the huydvetters or tanners, who practice their profession in the St. Janstraat exercised. On your right in the St. Janstraat is the Antonius van Paduakerk, a remarkably rich waterstaat church. This church was built in 1836 as first catholic church after the clandestine church period, which was officially built could become. In 1853 it became the first episcopal church (cathedral) of the new diocese in Breda. The seat of the bishop of Breda returned after a absence of 32 years at the beginning of 2001 back to the Antonius Church which thus again acquired the status of cathedral. Being at the front clearly see the three types of ancient columns. From the bottom to the top: Doric, Ionic and Corinthian columns. The statue above the entrance represents \'the religion\' for. The beautiful wooden pulpit immediately falls inside on. The life of H. Antonius is depicted in various panels. A little further on are remnants or just memories of two very distinguished court houses, the Huis Ocrum, in which the Academy of Art until 1994 St. Joost was established and Huis Hersbeeck, now rectory. in 1667 stayed in both houses the English envoys, who took part in the Peace negotiations of Breda. The representatives of the Council of State used the property (no. 16) when they were in town on business, but also King Louis Napoleon stayed there. The bay window of this building had a controlling function: the pastor could keep a close eye on who was went to church. Huis Ocrum (no. 18) was a Roman civilian orphanage from 1848 to 1952. You can you can still see the cobblestones on the 19th century facade of the academy building. The red color of this house (after the restoration applied) will develop a beautiful gray red over the years color of this house (applied after the restoration) will change over time get a beautiful gray-red color for years.</string>
    <string name="BibliotheekNieuweVeste">In the Molenstraat you will see the Library, designed by architect Herman Hertzberger. Because the Molenstraat is quite narrow, the architect space created by giving the library sloping walls. On the site of the library (on the corner with the Oude Vest) used to be  a gate. Above this gate was \'s Heeren Gevangenhuys, where the most severely punished were accommodated. The place is still with pebbles in it asphalt indicated; the asphalt road is the site of the old city moat.</string>
    <string name="Kloosterkazerne">On this corner you will see a distinguished monument from the history of Breda: the monastery barracks. It\'s part of the past sister monastery of St. Catharinadal, which had been located here since 1295. It current building dates from 1504. In 1645 the Norbertinessen sisters were expelled from Breda to Oosterhout.</string>
    <string name="ChasseTheater">The Chassé Theater is a large theater in the center of Breda, next to the old Kloosterkazerne. The theater is named after the army officer David Hendrik Chassé. It is housed in a modern building with a striking undulating roof designed by Herman Hertzberger 1995 dates. The theater consists of three theatres, three cinemas and three restaurants. The theater receives about 400,000 visitors every year. The predecessor of the Chassé Theater was the City Theater Concordia.</string>
    <string name="BindingVanIsaac">“In the Bible story, Abraham is commanded by God to sacrifice his son Isaac. And Abramham does this. Until God prevents this at the last minute and orders an animal to be sacrificed. This is a difficult story. Is this about religious insanity? this reassurance because God ultimately want love? Does this indicate the son\'s love for his father? The Sacrifice of Isaac by Menashe Kadishman portrays the Bible story with all the cruelty, vulnerability, madness, supremacy. How I wish that this story did not exist, that there was no madness but only love.\"</string>
    <string name="Beyerd">\"This is a cafe to me!\" A statement from a jury member who visited De Beyerd for the Café Top 100 election 2010. For the second time, De Beyerd finished at number 1 in this election. In 1995 under the leadership of father Piet and in 2010 sons Mikel and Orson manage to take the first position again to occupy cafe land. De Beyerd is much more than just a café. It is a versatile catering company with a family tradition since 1838. Traditionally it has always had the function of a café, expanded since 1992 with a beer specialty restaurant and in 2004 with its own brewery. De Beyerd: \'A modern company with a traditional appearance and a rich history!\'\"</string>
    <string name="Gasthuispoort">In the Middle Ages, Breda was surrounded by a city wall. The route of this can still be easily recognized in the Vlaszak, the Oude Vest, the Houtmarkt, the Karnemelkstraat, the Nieuweweg and the Haven. There were three city gates, the Gasthuispoort (at the end from the Veemarktstraat), the Eindpoort or Lombardpoort (at the end of the Eindstraat) and the Tolbrugpoort (at the Tolbrugstraat). A less important gate was located on the Waterstraat, the Waterpoort. The Gasthuispoort was therefore at the end of the Veemarktstraat. The original name of this street was the Gasthuisstraat. The Gasthuis stood on the site of the later Oudemannenhuis (today MOTI) on Boschstraat. The original name of the Boschstraat was therefore the Gasthuiseinde, the end, the suburb on the side of the Gasthuis.</string>
    <string name="WillemMerxtuin">The Willem Merkx Garden in Breda is an \'oasis\' of art and tranquility in the city centre. Nowhere in Breda can you see so much art in a small area as here. There are 12 artefacts and a sundial (which we cannot really consider as art). The Merkxtuin is located more or less hidden behind the former court houses in Catharinastraat, Sint Annastraat and Veemarktstraat and can be reached via 3 gates. One of the gates on the Catharinastraat side is signed with the text “Hof van Ghestel”. The garden in fact borders and even spills over into the backyards of the local residents. Due to its semi-public character and out of respect for the privacy of the residents, the garden is only accessible to the public between 8:00 and 16:00 and on weekends between 11:00 and 17:00. The garden is a unique piece of culture with beautiful trees and plants. The Merkx Garden is named after Willem Merkx who was mayor from 1967 to 1983 and was built in 1985.</string>
    <string name="Begijnenhof">The Breda Beguinage is a complex surrounded by walls consisting of houses and a small church in the center of Breda. The 29 houses divided over two courtyards are grouped around a herb garden. Here is also a statue of two beguines talking. It is located close to the Park Valkenberg.</string>
    <string name="NassauBaronieMonument">At the entrance of the city park, the Valkenberg, stands a monument that you tell us something about the history of the city of Breda, but especially about the Lords of the city from the House of Nassau and the 500 Years Band between Breda and the House of Nassau. On July 3, 1905, the Nassau-Barony monument, as it is officially called, with lots of festive display by Queen Wilhelmina revealed. The image reminds to the fact that in 1404 Count Engelbert, the first Bredase Nassau and his wife, Johanna van Polanen, were inaugurated as Lord and Lady of Breda. The designer is the well-known Dr. P.J.H. Cuypers, who, among other things, Rijksmuseum and the Central Station in Amsterdam. On this monument are not only the coats of arms of twenty municipalities in and around the Baronie, but also the Lion of Nassau towering above all with royal crown, sword and coat of arms. In the three reliefs the \'joyful incomst\' is of Count Engelbert and his wife. the burghers offer the key to the city.</string>
    <string name="TheLightHouse">Lighthouse (Dutch: Vuurtoren) is a work of art by the Italian architect Aldo Rossi in Park Valkenberg in Breda. It is striking that this lighthouse is located in Breda, a city that has no history with the sea and has therefore never had a lighthouse.</string>
</resources>